Se modifico index

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 		<div class="container borde" style="height: 200px;">
 			<h3>ALINACIÓN VERTICAL</h3>
 			<div class="row align-items-center borde1" style="height: 100px;">
-				<div class="col-4 borde2">
+				<div class="col-4 borde2 align-self-start">
 					<p>UNO</p>
 				</div>
 				<div class="col-4 borde3 align-self-end">
